# fast-RAG

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CONTRIBUTING.md  PLUGINS.md  PLUGIN_GUIDE.md  index.md
examples/01-basic-ingest-query/: README.md  ingest_and_query.py
examples/01-basic-ingest-query/data/: sample.txt
examples/02-custom-loader/: README.md  custom_csv_loader.py
examples/02-custom-loader/data/: sample.csv
examples/03-custom-pipeline/: README.md  custom_pipeline.py
examples/03-custom-pipeline/data/: sample.txt
examples/04-api-integration/: README.md  api_app.py
examples/04-api-integration/data/: sample.txt
fastrag/: __init__.py  ledger.py  pipeline.py  registry.py
fastrag/chunkers/: __init__.py  base.py  recursive.py
fastrag/cli/: __init__.py  clear.py  ingest.py  main.py  query.py  serve.py  status.py
fastrag/embedders/: __init__.py  base.py  openai.py  sentence_transformers.py
fastrag/loaders/: __init__.py  base.py  docx.py  md.py  pdf.py  txt.py
fastrag/stores/: __init__.py  base.py  chroma.py  pinecone.py  weaviate.py
tests/: __init__.py  test_ledger.py  test_pipeline.py  test_registry.py
tests/chunkers/: __init__.py  test_recursive.py
tests/embedders/: __init__.py  test_openai.py  test_sentence_transformers.py
tests/loaders/: __init__.py  test_docx.py  test_md.py  test_pdf.py  test_txt.py
tests/stores/: __init__.py  test_chroma.py  test_pinecone.py  test_weaviate.py
