# Build system — uses setuptools for packaging.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata.
[project]
name = "fastrag"
version = "0.1.0"
description = "Minimal RAG pipeline framework — raw documents in, queryable knowledge base out."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Hard dependencies — installed unconditionally.
dependencies = [
    "pdfplumber>=0.10",           # PDF text extraction
    "python-docx>=1.1",           # DOCX text extraction
    "chromadb>=0.5",              # Default vector store
    "sentence-transformers>=3.0", # Default embedder
    "numpy>=1.26",                # Vector math
    "typer>=0.12",                # CLI framework
    "fastapi>=0.111",             # Serve command
    "uvicorn[standard]>=0.30",    # ASGI server
    "rich>=13",                   # Pretty terminal output
]

# Optional dependencies — installed via `pip install fastrag[extra]`.
[project.optional-dependencies]
openai = ["openai>=1.0"]
pinecone = ["pinecone-client>=3.0"]
weaviate = ["weaviate-client>=4.0"]
all = ["fastrag[openai,pinecone,weaviate]"]

# CLI entry point — `fastrag` runs the typer app.
[project.scripts]
fastrag = "fastrag.cli.main:app"

# Package discovery — auto-find all `fastrag*` packages.
[tool.setuptools.packages.find]
where = ["."]
include = ["fastrag*"]
